--- a/package.json
+++ b/package.json
@@ -103,5 +103,8 @@
     "typedoc": "^0.11.0",
     "typescript": "^2.6.2",
     "validate-commit-msg": "^2.12.2"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.12"
   }
 }
