--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyson",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "A TypeScript serialization/deserialization library to convert objects to/from JSON.",
   "keywords": [
     "typescript",
@@ -37,7 +37,10 @@
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prepush": "npm run test:prod && npm run build",
+    "commitmsg": "validate-commit-msg",
+    "travis-deploy-once": "travis-deploy-once"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -100,7 +103,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.11.1",
-    "semantic-release": "^15.0.0",
+    "semantic-release": "^15.1.7",
     "ts-jest": "^22.0.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.8.0",
@@ -108,7 +111,8 @@
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.0",
     "typescript": "^2.6.2",
-    "validate-commit-msg": "^2.12.2"
+    "validate-commit-msg": "^2.12.2",
+    "travis-deploy-once": "^4.4.1"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.12"
