--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [
     "typescript",
     "json",
+    "converter",
     "serialization",
     "deserialization",
     "angular"
@@ -40,10 +41,14 @@
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
-    "prepush": "npm run test:prod && npm run build",
-    "commitmsg": "validate-commit-msg",
     "travis-deploy-once": "travis-deploy-once"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test:prod && npm run build"
+    }
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -93,7 +98,7 @@
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.1",
     "cz-conventional-changelog": "^2.0.0",
-    "husky": "^0.14.0",
+    "husky": "^1.0.0-rc.9",
     "jest": "^22.0.2",
     "lint-staged": "^7.0.0",
     "lodash.camelcase": "^4.3.0",
