--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   "devDependencies": {
     "@types/jest": "^22.0.0",
     "@types/node": "^9.3.0",
+    "babel-jest": "^23.4.2",
     "colors": "^1.1.2",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.2",
@@ -112,15 +113,15 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.11.1",
     "semantic-release": "^15.1.7",
-    "ts-jest": "^22.0.0",
+    "travis-deploy-once": "^4.4.1",
+    "ts-jest": "^23.0.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.1.0",
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.0",
     "typescript": "^2.6.2",
-    "validate-commit-msg": "^2.12.2",
-    "travis-deploy-once": "^4.4.1"
+    "validate-commit-msg": "^2.12.2"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.12"
