chore: update all dev tools

--- a/package.json
+++ b/package.json
@@ -1,129 +1,57 @@
 {
   "name": "@hyperloris/tyson",
-  "version": "0.0.0-development",
+  "version": "1.4.0",
   "description": "A TypeScript serialization/deserialization library to convert objects to/from JSON.",
-  "keywords": [
-    "typescript",
-    "json",
-    "converter",
-    "serialization",
-    "deserialization",
-    "angular"
-  ],
-  "main": "dist/tyson.umd.js",
-  "module": "dist/tyson.es5.js",
-  "typings": "dist/types/tyson.d.ts",
-  "files": [
-    "dist"
-  ],
-  "author": "Lorenzo Gigli <lorenzo.dramis@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hyperloris/tyson"
+    "url": "git+https://github.com/hyperloris/tyson.git"
   },
   "license": "MIT",
-  "engines": {
-    "node": ">=6.0.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
+  "author": "Lorenzo Gigli <lorenzo.dramis@gmail.com>",
+  "main": "./dist/main.js",
+  "module": "./dist/module.js",
+  "source": "./src/index.ts",
+  "types": "./dist/types.d.ts",
   "scripts": {
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
-    "test": "jest --verbose",
-    "test:watch": "jest --watch",
-    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "travis-deploy-once": "travis-deploy-once"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "validate-commit-msg",
-      "pre-commit": "lint-staged",
-      "pre-push": "npm run test:prod && npm run build"
-    }
+    "build": "parcel build",
+    "format": "prettier --write \"{src,test}/**/*.ts\"",
+    "format:check": "prettier --check \"{src,test}/**/*.ts\"",
+    "lint": "eslint --fix \"{src,test}/**/*.ts\"",
+    "lint:check": "eslint \"{src,test}/**/*.ts\"",
+    "prepare": "husky install",
+    "release": "release-it",
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "lint-staged": {
-    "{src,test}/**/*.ts": [
-      "prettier --write --print-width 120",
-      "git add"
+    "*.ts": [
+      "prettier --write",
+      "eslint --fix"
     ]
   },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    },
-    "validate-commit-msg": {
-      "types": "conventional-commit-types",
-      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
-    }
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "collectCoverage": true,
-    "mapCoverage": true
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.0",
-    "@types/node": "^9.3.0",
-    "babel-jest": "^23.4.2",
-    "colors": "^1.1.2",
-    "commitizen": "^2.9.6",
-    "coveralls": "^3.0.2",
-    "cross-env": "^5.0.1",
-    "cz-conventional-changelog": "^2.0.0",
-    "husky": "^1.0.0-rc.9",
-    "jest": "^22.0.2",
-    "lint-staged": "^7.0.0",
-    "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.4.4",
-    "prompt": "^1.0.0",
-    "replace-in-file": "^3.0.0-beta.2",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.57.0",
-    "rollup-plugin-commonjs": "^9.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.11.1",
-    "semantic-release": "^15.9.12",
-    "travis-deploy-once": "^5.0.7",
-    "ts-jest": "^23.0.0",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.8.0",
-    "tslint-config-prettier": "^1.1.0",
-    "tslint-config-standard": "^7.0.0",
-    "typedoc": "^0.11.0",
-    "typescript": "^2.6.2",
-    "validate-commit-msg": "^2.12.2"
-  },
-  "dependencies": {
-    "reflect-metadata": "^0.1.12"
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@parcel/packager-ts": "^2.8.2",
+    "@parcel/transformer-typescript-types": "^2.8.2",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/jest": "^29.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "parcel": "^2.8.2",
+    "prettier": "^2.8.2",
+    "release-it": "^15.6.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   }
 }
