--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
-node_modules
-coverage
-.nyc_output
-.DS_Store
-*.log
-.vscode
-.idea
-dist
-compiled
-.awcache
-.rpt2_cache
-docs
+/dist
+/node_modules
+/coverage
+
+.cache
+.parcel-cache
